# seqlogic

./: .flake8  .gitignore  .pylintrc  .readthedocs.yaml  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  ruff.toml
doc/: requirements.txt
doc/source/: bits.rst  conf.py  index.rst  installation.rst  reference.rst  release_notes.rst
ipynb/: dff.ipynb  dining_philosophers.ipynb  flop.ipynb  grade_school_multiplication.ipynb  johnson_counter.ipynb  optional_ports.ipynb  riscv.ipynb
src/seqlogic/: __init__.py  _bits_enum.py  _bits_struct.py  _bits_union.py  _design.py  _expr.py  _hier.py  _lbool.py  _proc_if.py  _trace_if.py  bits.py  design.py  enum.py  expr.py  hier.py  lbconst.py  lbfunc.py  lbool.py  logic.py  logicvec.py  pc.py  pcn.py  sim.py  util.py  var.py  vec.py
tests/: __init__.py  add.text  common.py  conftest.py  test_aes.py  test_bits.py  test_design.py  test_enum.py  test_event.py  test_exc.py  test_finish.py  test_fsm.py  test_gray.py  test_hier.py  test_lbool.py  test_lfsr.py  test_lock.py  test_logic.py  test_logic_vector.py  test_logicvec.py  test_pcn.py  test_riscv.py  test_semaphore.py  test_sim.py  test_struct.py  test_task.py  test_union.py  test_vec.py
tests/algorithms/: __init__.py  test_count.py  test_gray.py
tests/bits/: __init__.py  test_bits.py  test_vec.py
tests/datastruct/: __init__.py  test_fbeb.py  test_hbeb.py  test_pipe_reg.py
tests/expr/: __init__.py  test_arithmetic.py  test_bitwise.py  test_getters.py  test_logical.py  test_predicate.py  test_unary.py  test_var.py  test_word.py
(+148 files in other folders)
