[project]
name = "seqlogic"
version = "0.43.0"
description = "Sequential Logic"
readme = "README.md"

requires-python = ">=3.12"
dependencies = [
    "bvwx >= 0.9.0",
    "deltacycle >= 0.3.0",
    "pyvcd",
]

[project.urls]
Repository = "https://github.com/cjdrake/seqlogic.git"

[tool.black]
line-length = 100

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
    "pytest-profiling>=1.8.1",
]
