[project]
name = "seqlogic"
version = "0.44.0"
description = "Sequential Logic"
readme = "README.md"

requires-python = ">=3.12"
dependencies = [
    "bvwx >= 0.12.0",
    "deltacycle >= 0.5.0",
    "pyvcd",
]

[project.urls]
Repository = "https://github.com/cjdrake/seqlogic.git"

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
    "pytest-profiling>=1.8.1",
    "ruff>=0.11.9",
    "sphinx>=8.2.3",
    "sphinx-autobuild>=2024.10.3",
    "sphinx-book-theme>=1.1.4",
]
